Adding swagger documentation
